<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBgColor"
    android:id="@+id/rlParent"
    tools:context=".home.presentation.HomeActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_pattern" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:gravity="start|center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvTitle"
                android:textSize="20sp"
                android:text="@string/task_listing"
                android:textColor="@color/appMainTextColor"
                android:textStyle="bold"
                android:gravity="start"
                android:layout_marginEnd="10dp"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/voice_btn"
                android:contentDescription="@string/voice" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp"
            android:weightSum="2">
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
            android:layout_height="match_parent"
                app:cardCornerRadius="8dp"
                android:layout_weight="0.8"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">
                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/sivBanner"
                    app:shapeAppearanceOverlay="@style/CustomRoundedImageView"
                    android:scaleType="centerCrop"
                    android:adjustViewBounds="true"
                    android:src="@drawable/place_holder_image_square"/>

            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:background="@drawable/bg_white_rectangle"
                android:orientation="vertical"
                android:padding="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/starting"
                            android:gravity="center"
                            android:textSize="16sp"
                            android:layout_marginTop="5dp"
                            android:textStyle="bold"
                            android:textColor="@color/appMainTextColorLight"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="00:00 AM"
                            android:id="@+id/tvStartTime"
                            android:layout_marginTop="5dp"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:textColor="@color/appMainRedDark"
                            android:background="@drawable/card_border_round_red"
                            android:padding="10dp"/>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/now"
                            android:textSize="16sp"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:textColor="@color/appMainTextColorLight"/>

                        <DigitalClock
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:id="@+id/dcTime"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:textColor="@color/appMainRedDark"
                            android:background="@drawable/card_border_round_red"
                            android:padding="10dp"/>

                    </LinearLayout>
                </LinearLayout>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/mask_bg_green">
                    <ProgressBar
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/pbRemainingTime"
                        android:max="100"
                        android:progress="50"
                        android:progressDrawable="@drawable/rounded_horizontal_progress_bar"/>
                    <com.example.childtaskmanager.core.utils.customViews.CustomTextViewBordered
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/ctvbTimer"
                        android:gravity="center"
                        android:text="00:10"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:outerShadowRadius="2dp"
                        app:strokeColor="@color/appMainTextColorLight"
                        app:strokeJoinStyle="miter"
                        app:strokeWidth="0.7dp"/>

                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:id="@+id/llOk"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:background="@drawable/card_border_round_purple">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:src="@drawable/double_tick_ok"/>
                    <com.example.childtaskmanager.core.utils.customViews.CustomTextViewBordered
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:padding="10dp"
                        android:gravity="center"
                        android:text="@string/okay"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:outerShadowRadius="2dp"
                        app:strokeColor="@color/appMainTextColorLight"
                        app:strokeJoinStyle="miter"
                        app:strokeWidth="0.7dp"/>

                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <include
        android:id="@+id/progressLayout"
        layout="@layout/layout_progress"
        android:visibility="gone"/>

</RelativeLayout>